--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
-header {height:200px;}
-.contents{height:200px;}
-footer{height:200px;}
+header {height:120px; background-color: #999;}
+.contents{height:600px; background-color: #fff;}
+.signUpParameterMenu{
+	background-color: #999;
+	font-weight: bold;
+	}
+
+footer{height:120px; background-color: #999;}
