중복확인, 회원가입 에러 해결(경로 / 안 씀, DAO에서 @RequestParam으로 잘못 씀) / 로그인 에러 해결 안됨

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,10 +1,11 @@
 @charset "UTF-8";
 
-header {height:120px; background-color: #999;}
-.contents{height:600px; background-color: #fff;}
-.signUpParameterMenu{
-	background-color: #999;
-	font-weight: bold;
-	}
+header {height:100px; background-color: #999;}
+.contents{height:500px; background-color: #fff;}
+footer{height:100px; background-color: #999;}
 
-footer{height:120px; background-color: #999;}
+.header-box {height:100px;}
+.footer-box {height:100px;}
+
+.sign-up-box {width:550px;}
+.sign-up-table th {background:#D8D8D8;}
