--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 header {height:100px; background-color: #999;}
-.contents{height:500px; background-color: #fff;}
+.contents{min-height:500px; background-color: #fff;}
 footer{height:100px; background-color: #999;}
 
 .header-box {height:100px;}
